--- a/_config.yaml
+++ b/_config.yaml
@@ -1,19 +1,19 @@
 # site properties and page defaults
-title: GR2023Info
-subtitle: 
-description: An engaging 1-3 sentence description of your lab.
+title: IMPACT Lab
+subtitle: Integrative Multimodal Perception And Cognitive Technologies
+description: IMPACT Lab is a developing research group focused on integrative multimodal perception and intelligent systems, led by Dr. Ghazal Rouhafzay.
 header: images/background.jpg
 footer: images/background.jpg
 proofer: false
 
 # site social media and other links
 links:
-  email: contact@GR2023Info.com
+  email: ghazal.rouhafzay@umoncton.ca
   orcid: 0000-0001-8713-9213
   google-scholar: ETJoidYAAAAJ
-  github: GR2023Info
-  twitter: GR2023Info
-  youtube: GR2023Info
+  github: 
+  twitter: 
+  youtube: 
 
 ### jekyll settings
 
