Change header image from logo to background

--- a/_config.yaml
+++ b/_config.yaml
@@ -2,7 +2,7 @@
 title: IMPACT Lab
 subtitle: Integrative Multimodal Perception And Cognitive Technologies
 description: IMPACT Lab is a developing research group focused on integrative multimodal perception and intelligent systems, led by Dr. Ghazal Rouhafzay.
-header: images/logo.svg
+header: images/background.jpg
 footer: images/background.jpg
 proofer: false
 
