Update Google Scholar link in config

--- a/_config.yaml
+++ b/_config.yaml
@@ -10,7 +10,7 @@ proofer: false
 links:
   email: ghazal.rouhafzay@umoncton.ca
   orcid: 0000-0003-3762-0900
-  google-scholar: ETJoidYAAAAJ
+  google-scholar: https://scholar.google.ca/citations?user=odKfaGwAAAAJ&hl=en
   github: 
   twitter: 
   youtube: 
