--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -1,7 +1,7 @@
 - title: Early Autism Detection from Voice Biomarkers
   subtitle: Deep learning for speech-based screening signals
   group: featured
-  image: images/voice-biomarkers.jpg
+  image: images/voice-biomarkers.png
   link: https://ghazalrouhafzay.github.io/IMPACT/
   description: Research on early autism detection using voice biomarkers and deep learning, with emphasis on robust feature learning and careful evaluation for health applications.
   tags:
